# llm-swarm

./: .gitignore  .pre-commit-config.yaml  README.md  generate_hh.py  generate_hh_simple.py  generate_rw_textbooks.py  get_hostname.sh  get_hostname_template.sh  merge_data.py  pyproject.toml  tgi.slurm  tgi_h100.slurm  tgi_template.slurm  vllm_h100.slurm
examples/: benchmark.py  hello_world.py  hello_world_vllm.py
examples/completions/: generate_completions.py
examples/constitutional-ai/: README.md  constituion_grok.json  generate_dataset.py  generate_system_chat.py
examples/hh/: README.md  constitution.json  generate_hh copy.py  generate_hh.py  generate_hh_simple.py  generate_system_chat.py  requirements.txt
examples/hh/exps/: constitution_1705620057.json  grok_constituion_1705632548.json
examples/openhermes-preference/: README.md  concat_and_push.py  dpo_pair_rm.py  generate.py  requirements.txt
examples/self_reward/: README.md  generate.py
examples/textbooks/: README.md  generate_fineweb.py  generate_openstax.py  generate_rw_textbooks.py  generate_syntehtic_textbooks.py  generate_synthetic_textbooks.py  rag_embed.py  readme.md  requirements.txt
inference_swarm/: __init__.py  __main__.py
llm_swarm/: __init__.py  __main__.py
templates/: nginx.template.conf  tei_h100.template.slurm  tgi_a100.template.slurm  tgi_h100.template.slurm  vllm_h100.template.slurm  vllm_h100.template_pythia.slurm
tgi_swarm/: __init__ copy.py  __init__.py
