[tool.poetry]
name = "llm-swarm"
version = "0.1.0"
description = ""
authors = [
    "Guilherme Penedo <guilherme@huggingface.co>",
    "Shengyi Costa Huang <costa@huggingface.co>",
    "Loubna Ben Allal <loubna@huggingface.co>",
    "Thomas Wolf <thomas@huggingface.co>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
asyncio = "^3.4.3"
aiohttp = "^3.8.6"
tqdm = "^4.66.1"
pandas = "^2.1.2"
datasets = "^2.14.6"
tyro = "^0.5.12"
huggingface-hub = "^0.20.2"
transformers = "^4.36.2"
jinja2 = "^3.1.2"
wonderwords = "^2.2.0"
hf-transfer = "^0.1.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.ruff]
ignore = ["E501", "E741", "W605"]
line-length = 127
# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
